Fix overflow on guide (#96)

--- a/assets/styles/pages/_project.scss
+++ b/assets/styles/pages/_project.scss
@@ -1,6 +1,7 @@
 .project {
   display: flex;
   flex: 1 1 auto;
+  overflow: hidden;
 
   &__sidebar {
     background-color: var(--c-white);
